--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codewithwest/module-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Hande Client Api transactions",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,12 @@
     "@codewithwest/module-knight-trainer": "*",
     "express": "4.19.2",
     "mongoose": "8.4.4"
+  },
+    "devDependencies": {
+      "eslint": "*",
+      "eslint-config-prettier": "*",
+      "eslint-plugin-prettier": "*",
+      "prettier": "*"
   },
   "type": "module"
 }
